# melatonin-bot

./: .gitignore  Cargo.toml  README.md
migrations/: 20230805192830_user.sql  20230805193437_corpo.sql  20230805193442_vtuber.sql  20230805194216_user_vtuber.sql  20230805194220_schedule.sql
src/: bot_init.rs  config.rs  handlers.rs  main.rs  main_client.rs  markup.rs  queries.rs  reported_stream.rs  user.rs  vtuber.rs  wrapper.rs
